universal command variable #20
