# topology-conversion/swagger/swagger.yaml
@@ -33,29 +33,56 @@ paths:
   /switch/enable/{dpId}:
     get:
       tags:
-        - Topology
-      summary: Retrieve converted network topology
-      description: Fetches and converts the topology from a Kytos SDN controller, providing a transformed view suitable for SDX operations.
+        - Switch
+      summary: Enable a switch passing its dpid
+      description: Enable a switch passing its dpid
       parameters:
         - in: path
           name: dpId
           schema:
             type: string
           required: true
-          description: Numeric ID of the Switch
+          description: dpId of the Switch
       operationId: get_switch_enable
       responses:
         '200':
-          description: Successfully retrieved and converted network topology.
+          description: Successfully enable a switch passing its dpId.
           content:
             application/json: {}
         '401':
-          description: Validation error in the conversion process.
+          description: Validation error in the switch enable process.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
       x-openapi-router-controller: controllers.topology_controller
+  /switch/disable/{dpId}:
+    get:
+      tags:
+        - Switch
+      summary: Disable a switch passing its dpid
+      description: Disable a switch passing its dpid
+      parameters:
+        - in: path
+          name: dpId
+          schema:
+            type: string
+          required: true
+          description: dpId of the Switch
+      operationId: get_switch_disable
+      responses:
+        '200':
+          description: Successfully disable a switch passing its dpId.
+          content:
+            application/json: {}
+        '401':
+          description: Validation error in the switch disable process.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-openapi-router-controller: controllers.topology_controller
+
 
 
 components:
